# userclouds-oss

./: .gitignore  CONTRIBUTING.md  DEPLOY.md  Makefile  eslint.config.mjs  go.mod  go.sum  go.work  go.work.sum  package.json  requirements.txt  tsconfig.base.json
authz/: attribute_validate_generated.go  attributepathnode_validate_generated.go  attributes_dbjson_generated.go  cache_name_provider.go  cache_ttl_provider.go  client.go  client_cache_test.go  client_migration.go  client_test.go  constants.go  createedgerequest_validate_generated.go  createedgetyperequest_validate_generated.go  createobjectrequest_validate_generated.go  createobjecttyperequest_validate_generated.go  createorganizationrequest_validate_generated.go  edge_pageable_generated.go  edge_validate_generated.go  edgetype_pageable_generated.go  edgetype_validate_generated.go  errors.go  events.go  gbacclient.go  gbacclient_group.go  gbacclient_user.go  gbacclient_validate_generated.go  group_validate_generated.go  models.go  models_backend.go  (+14 more)
public-repos/sdk-python/: .gitignore  CHANGELOG.md  README.md  init.sh  lintfix.sh  pyproject.toml  requirements-dev.txt  requirements.txt
public-repos/sdk-python/.github/workflows/: release.yaml
public-repos/sdk-python/src/: authz_sample.py  test_sdk_samples.py  tokenizer_sample.py  userstore_sample.py
public-repos/sdk-python/src/usercloudssdk/: asyncclient.py  client.py  client_helpers.py  client_test.py  constants.py  data_types.py  errors.py  models.py  policies.py  token.py  uchttpclient.py  ucjson.py
public-repos/sdk-python/tools/: genasyncclient.py
(+3014 files in other folders)
